Add testing chat provider chooser
